--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -5,7 +5,7 @@
 % @license see 'LICENSE' file
 %
 
-\chapter{Interlude II: Mathematics for 3-d Graphics}
+\chapter{Interlude: Mathematics for 3-d Graphics}
 \label{ch:gl}
 
 The software of this work uses \textit{OpenGL} \cite{web_OpenGL} in its main graphical user interface (GUI).
