--- a/tex/tests.tex
+++ b/tex/tests.tex
@@ -27,6 +27,10 @@ These are described in section \ref{sec:tests_tools}.
 
 
 \subsection{Line segments tool}
+\label{sec:tests_linesegs}
+
+%the source code in \lstinline|./src/tools/lines.cpp|
+
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width = 0.49 \textwidth]{figures/linesgui_voro}
@@ -64,6 +68,7 @@ These are described in section \ref{sec:tests_tools}.
 
 
 \subsection{Convex hull tool}
+\label{sec:tests_hull}
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width = 0.49 \textwidth]{figures/hullgui_voro}
