--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -479,6 +479,23 @@
 	url = {https://www.sciencedirect.com/science/article/pii/S0262885606003064},
 }
 
+
+@article
+{
+	Icking2001,
+	author = {Christian Icking and Rolf Klein and Lihong Ma and Stefan Nickel and Ansgar Wei\ss{}ler},
+	title = {{On bisectors for different distance functions}},
+	journal = {Discrete Applied Mathematics},
+	volume = {109},
+	number = {1},
+	pages = {139-161},
+	year = {2001},
+	note = {14th European Workshop on Computational Geometry},
+	issn = {0166-218X},
+	doi = {10.1016/S0166-218X(00)00238-9},
+	url = {https://www.sciencedirect.com/science/article/pii/S0166218X00002389},
+}
+
 % -----------------------------------------------------------------------------
 
 
