--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -25,6 +25,7 @@ review the ideas of motion planning for a point-like robot in section \ref{sec:p
 \label{sec:pointrobot}
 
 \subsection{Sector-based method}
+\label{sec:pointrobot_sector}
 An algorithm for motion planning in a point-like robot based on decomposing the 
 available space into sectors is given in Ref. \cite[Ch. 13, pp. 283-306]{Berg2008}, 
 whose descriptions we follow in this section. 
