--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -261,6 +261,21 @@
 
 @article
 {
+	Eckold2014,
+	author = {G. Eckold and O. Sobolev},
+	title = {{Analytical approach to the 4D-resolution function of three axes neutron spectrometers with focussing monochromators and analysers}},
+	journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+	volume = {752},
+	pages = {54-64},
+	year = {2014},
+	issn = {0168-9002},
+	doi = {10.1016/j.nima.2014.03.019},
+	url = {https://www.sciencedirect.com/science/article/pii/S0168900214002940},
+}
+
+
+@article
+{
 	vTAS2013,
 	author = {M. B\"ohm and A. Filhol and Y. Raoul and J. Kulda and W. Schmidt and K. Schmalzl and E. Farhi},
 	title = {{The vTAS suite: A simulator for classical and multiplexed three-axis neutron spectrometers}},
