--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -5,6 +5,8 @@
 % @license see 'LICENSE' file
 %
 
+% TODO: describe reciprocal xtal lattice in general
+
 \chapter{Crystal and Instrument Coordinate Systems}
 \label{ch:xtal}
 
@@ -119,7 +121,7 @@ Explicitly written out using the basis vectors, the matrix reads \cite{wiki_frac
 \end{equation}
 
 
-The $B$ matrix, which transforms reciprocal-space relative lattice units (rlu) to lab coordinates (1/\AA), is:
+The $B$ matrix, which transforms reciprocal-space relative lattice units (rlu) to lab coordinates (1/\AA), is \cite[p. 60]{Gross2012}:
 \begin{equation} B \ =\  2 \pi A^{-t}, \end{equation}
 where $-t$ denotes the transposed inverse.
 We can now also determine the metric tensor corresponding to the coordinate system defined by the $B$ transformation matrix, it reads \cite[p. 808]{Arens2015}:
