--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -158,7 +158,7 @@ Finally, the check boxes named ``scattering senses'' control the sign of the sca
 If the box is checked, a positive angle corresponds to a counterclockwise sense, i.e. corresponding
 to the usual mathematical definition, and alternatively to a clockwise sense when unchecked.
 From the standpoint of the physics to be studied in the sample, these signs have no influence
-in practice. They do, however, strongly affect the resolution of the instrument \cite{TODO}
+in practice. They do, however, strongly affect the resolution of the instrument \cite{Eckold2014}
 and have to be considered carefully in the set-up of an experiment.
 \end{minipage}
 
