--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1082,6 +1082,17 @@
 
 @misc
 {
+	web_QGraphicsScene,
+	title = {{Class QGraphicsScene, part of the Qt library \cite{web_Qt} (Software)}},
+	author = {{The Qt Company}},
+	year = {2021},
+	url = "https://doc.qt.io/qt-5/qgraphicsscene.html",
+	note = "[Online; accessed 26-August-2021]",
+}
+
+
+@misc
+{
 	web_QVulkanWindow,
 	title = {{Class QVulkanWindow, part of the Qt library \cite{web_Qt} (Software)}},
 	author = {{The Qt Company}},
