--- a/tex/tests.tex
+++ b/tex/tests.tex
@@ -120,7 +120,7 @@ Its main functionality consists of determining the convex hull, the Voronoi diag
 as well as the Delaunay triangulation the given set of vertices.
 This is shown in Fig. \ref{fig:hullgui} (a).
 A secondary feature, depicted in Fig. \ref{fig:hullgui} (b), is the calculation of 
-the minimal spanning tree between the vertices.
+the minimal spanning tree between the vertices \cite{TODO}.
 
 % TODO: backend, choice between different algorithms possible
 
