--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -230,13 +230,30 @@
 
 @book
 {
-	FUH_algo2021,
+	FUH_algo_graphs_2021,
         author = {Andr\'e Schulz and Jonathan Rollin},
-        title = {{Manuscript of the course 01684, ``Effiziente Algorithmen''}},
+        title = {{Manuscript of the course 01684, ``Effiziente Algorithmen'' -- ``Kurseinheit 4: Graphenalgorithmen I''}},
         year = {summer semester 2021},
         publisher = {{FernUniversit\"at in Hagen, Fakult\"at f\"ur Mathematik und Informatik, Hagen, Germany}},
         url = {https://vu.fernuni-hagen.de/lvuweb/lvu/app/Kurs/1684}
 }
+
+
+@incollection
+{
+	Ellson2003,
+	author = {John Ellson and Emden R. Gansner and Eleftherios Koutsofios and Stephen C. North and Gordon Woodhull},
+	title = {{Graphviz and Dynagraph – Static and Dynamic Graph Drawing Tools}},
+	editor = {M. J\"unger and P. Mutzel},
+	booktitle = {{Graph Drawing Software, Mathematics and Visualization}},
+	year = {2004},
+	pages = {127-148},
+	doi = {10.1007/978-3-642-18638-7_6},
+	isbn = {978-3-642-18638-7},
+	OPTurl = {https://graphviz.org/documentation/EGKNW03.pdf},
+	publisher = {Springer-Verlag, Berlin, Heidelberg}
+}
+
 % -----------------------------------------------------------------------------
 
 
