--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -7,14 +7,15 @@
 
 \chapter{Basic Concepts, Algorithms and Data Structures}
 \label{ch:algos}
-Before coming to the path-finding algorithm and implementation details, several general concepts, 
-data structures and methods, that are employed in this work, are reviewed in a general manner.
+The  path-finding algorithm and implementation, that will be presented in the following chapters,
+employs several different concepts, data structures and methods.
+In this chapter, these basic building blocks are reviewed in a general manner.
 
 
 \section{Voronoi diagrams}
 \label{sec:voro}
-As we will see in the next chapter, Voronoi diagrams play a central role for the path-finding 
-algorithm of this work. 
+As we will see in the next chapter, a concept that will play a central role for the path-finding 
+algorithm of this work is the Voronoi diagram.
 A good review of Voronoi diagrams is given in Ref. \cite[Ch. 7, pp. 147-171]{Berg2008} 
 and in \cite[Ch. 5, pp. 209f]{FUH_geo2020}, which we follow in this chapter.
 
@@ -50,11 +51,11 @@ An example of two or several vertex sites and their bisectors is shown in Fig. \
 \begin{figure}[htb]
 	\begin{minipage}{1 \textwidth}
 		\begin{center}
-			\includegraphics[width = 0.4 \textwidth]{figures/vertex_voro}
+			\includegraphics[width = 0.35 \textwidth]{figures/vertex_voro}
 		\end{center}
-		\vspace{1cm}
+		\vspace{0.5cm}
 		\begin{center}
-			\includegraphics[width = 0.75 \textwidth]{figures/vertex_voro2}
+			\includegraphics[width = 0.7 \textwidth]{figures/vertex_voro2}
 		\end{center}
 	\end{minipage}
 	\caption[Voronoi diagrams for vertices.]{
@@ -74,8 +75,9 @@ Vertex-site Voronoi diagrams are ubiquitous in solid-state physics and all its c
 like neutron scattering, magnetism, etc., although they are not called so in these fields.
 In physics, one usually thinks in terms of the reciprocal (dual, Fourier) space of a crystal lattice, as discussed
 in chapter \ref{ch:xtal}. Due to the periodic nature of the crystal and its reciprocal space, one can define a smallest
-cell for which all physics is the same, the so-called \textit{first Brillouin zone} of the reciprocal
-lattice \cite[pp. 63-64]{Gross2012}, whose definition corresponds to that of the Voronoi region.
+cell around the sites in reciprocal space (called ``Bragg peaks'') for which all physics is the same, the so-called 
+\textit{first Brillouin zone} of the reciprocal lattice \cite[pp. 63-64]{Gross2012}, 
+whose definition corresponds to that of the Voronoi region of the Bragg peaks.
 The crystal and its reciprocal lattice are assumed to be infinite. This is a good approximation as one usually
 considers physics in the Angstrom scale, while the crystals used in neutron scattering usually have volumes on the
 $cm^3$ scale. Having an infinite lattice has the effect that the Voronoi diagram does not possess any open regions.
@@ -85,7 +87,7 @@ Typical examples of Brillouin zone shapes for cubic crystals are shown in Fig. \
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width = 0.75 \textwidth]{figures/bz}
+		\includegraphics[width = 0.8 \textwidth]{figures/bz}
 	\end{center}
 	\caption[Brillouin zones.]{
 		First Brillouin zone for
@@ -106,7 +108,8 @@ A description of this case can be found in \cite[Ch. 7.3, pp. 160-163]{Berg2008}
 \cite[pp. 242-247]{FUH_geo2020}, whose descriptions we follow in this section.
 
 For this case, the Voronoi region of a line $l_i$ consists of all points in $\mathbb{R}^2$ that 
-are closest to $l_i$. The bisector is the boundary between the Voronoi regions of two line segments $l_i$ and $l_j$, $i \neq j$,
+are closest to $l_i$. The bisector is the boundary between the Voronoi regions of two line segments 
+$l_i$ and $l_j$, $i \neq j$,
 and is the curve of equal distance between the two line segments $l_i$ and $l_j$.
 Its shape is either linear or quadratic, where, in the linear case, the bisector curve can also be either
 finite or infinite \cite[pp. 243-244]{FUH_geo2020}.
@@ -121,12 +124,12 @@ between a line segment endpoint and one inner point of the other segment. This i
 a point and a line and it parabolic distance is shown in \cite[pp. 260-261]{FUH_geo2020}.
 An example of two or several line segment sites and their bisectors is shown in Fig. \ref{fig:linesegs_voro}.
 
-\begin{figure}[htb]
+\begin{figure}[h]
 	\begin{minipage}{1 \textwidth}
 		\begin{center}
-			\includegraphics[width = 0.75 \textwidth]{figures/linesegs}
+			\includegraphics[width = 0.7 \textwidth]{figures/linesegs}
 		\end{center}
-		\vspace{0.25cm}
+		\vspace{0.5cm}
 	\end{minipage}
 	\begin{minipage}{1 \textwidth}
 		\vspace{0.25cm}
@@ -184,4 +187,38 @@ The first three are feasible for the present project, though:
 
 \section{Graphs}
 \label{sec:graphs}
+Another crucial concept for path-finding on a mesh of nodes is the graph.
+A good review of graph theory can be found in Ref. \cite{FUH_algo_graphs_2021},
+which we will follow in this section.
 
+A graph is a tuple $G = \left(V, E\right)$ of a set of vertices $V$ and edges $E \subseteq V \times V$ 
+connecting the vertices. For the present case, we only consider directed and weighted graphs 
+\cite[pp. 1-3]{FUH_algo_graphs_2021}.
+\textit{Directed} means that the existence of an edge $e = \left(v_1, v_2\right)$ connecting vertices 
+$v_1 \in V$ and $v_2 \in V$ does not imply the existence of the reverse connection $e'= \left(v_2, v_1\right)$
+from $v_2$ to $v_1$. That would only be the case in an undirected graph.
+\textit{Weighted} means that a weight function $w: E \rightarrow \mathbb{R}$ exists which maps each 
+edge $e \in E$ to a weight factor $w\left(e\right) \in \mathbb{R}$ quantifying that edge. 
+For example, the weight factors could be distances for a graph whose vertices correspond to Cartesian coordinates.
+Another restriction that will be used in this work is the exclusion of loops in the graph, i.e.
+no edges $e = \left(v, v\right)$ connecting a vertex $v \in V$ to itself will be allowed.
+Finally, we define a path in the graph as a tuple of $n$ vertices $p = \left(v_1, v_2, ..., v_n\right)$
+where subsequent vertices $v_i$ and $v_{i+1}$, $i \in \left[1, n\right]$, are connected by an edge and 
+where each vertex in the tuple is unique, i.e. $v_i \neq v_j$ for $i \neq j$.
+Specifically, this signifies that there are no loops and no vertex is visited multiple times upon 
+traversal of the path.
+An example for a graph is shown in Fig. \ref{fig:example_graph}.
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width = 1 \textwidth]{figures/example_graph}
+	\end{center}
+	\caption[Example graph.]{
+		Example of a directed, weighted graph containing five vertices, $v_1$, $v_2$, ..., $v_5$.
+		The figure has been drawn using the \textit{Dot} tool from the \textit{Graphviz} software \cite{Ellson2003}.
+		\label{fig:example_graph}}
+\end{figure}
+
+
+\subsection{Dijkstra's algorithm}
+\label{sec:dijkstra}
